masse endringer for design på forsiden

--- a/nablapps/nablaforum/templates/nablaforum/includes/forum_widget.html
+++ b/nablapps/nablaforum/templates/nablaforum/includes/forum_widget.html
@@ -1,4 +1,4 @@
-<div class="forum card card-body bg-light">
+<div class="forum card card-body card-body-overline">
     <h1><a href="{% url "forum-main" channel_id=1 thread_id=0 %}" style="color: black">Nablaforum</a></h1>
     <h4>Siste fra Nablafeed</h4>
     {% for message in latest_feed %}
