--- a/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
+++ b/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
@@ -40,17 +40,17 @@ office_events is a dictionary with weekday as key and a list of events as value
 
 #office-cal-container{
     height: 100%;
-    box-shadow:  0 0 2px rgba(0, 0, 0, 0.24);
-    border-top: 4px solid black;
-    border-bottom: 1px solid #D0D0D0;
-    border-left: 1px solid #D0D0D0;
-    border-right: 1px solid #D0D0D0;
+    {#box-shadow:  0 0 2px rgba(0, 0, 0, 0.24);#}
+    {#border-top: 4px solid black;#}
+    {#border-bottom: 1px solid #D0D0D0;#}
+    {#border-left: 1px solid #D0D0D0;#}
+    {#border-right: 1px solid #D0D0D0;#}
 
 }
 </style>
 {% endaddtoblock %}
 
-<div id=office-cal-container>
+<div class="h-100 card card-body-overline pt-3" style="word-wrap: normal">
 <table id="office_calendar">
     <col width="20%">
     <col width="55%">
