--- a/templates/base.html
+++ b/templates/base.html
@@ -311,58 +311,59 @@
             <div class="container">
             <div class="row pb-4">
 
-                    {# kontakt #}
+                {# kontakt #}
 
-                    {# end kontakt #}
+                {# end kontakt #}
 
-                    {# om nabla #}
-                    <div class="col-md-3 ">
-                    <h2>Informasjon</h2>
-{#                    <p >Se <a href="/contact/">kontaktsiden</a></p>#}
+                {# om nabla #}
+                <div class="col-md-3 ">
+                <h2>Informasjon</h2>
+{#                   <p >Se <a href="/contact/">kontaktsiden</a></p>#}
 
-                    <p>
-                        Organisasjonsnr.: <span class="float-right">992168544</span><br />
-                        Hovedkonto: <span class="float-right">1503.13.57338</span><br />
-                        Arrkomkonto: <span class="float-right">1503.13.57400</span><br />
-                        ProKom-konto: <span class="float-right">1506.19.24172</span><br />
-                        Gravitoneskonto: <span class="float-right">1503.65.97965</span><br />
-                    </p>
+                <p>
+                Organisasjonsnr.: <span class="float-right">992168544</span><br />
+                Hovedkonto: <span class="float-right">1503.13.57338</span><br />
+                Arrkomkonto: <span class="float-right">1503.13.57400</span><br />
+                ProKom-konto: <span class="float-right">1506.19.24172</span><br />
+                Gravitoneskonto: <span class="float-right">1503.65.97965</span><br />
+                </p>
 
 
-                    </div>
-                     <div class="col-md-3 text-center ">
-                        <h2>Kontakt</h2>
+                </div>
+                 <div class="col-md-3 text-center ">
+                    <h2>Kontakt</h2>
 {#                        <a class="email" href="mailto:nabla@nabla.ntnu.no">nabla@nabla.ntnu.no</a>#}
-                                             <p > <a href="/contact/">Kontaktside</a> <br>
-                            Nabla <br>
-                            Kjemiblokk 2 <br>
-                            Sem Sælands vei 10, NTNU <br>
-                            7034 Trondheim <br>
-                            Norway
-                        </p>
-                    </div>
+                        <p > <a href="/contact/">Kontaktside</a> <br>
+                        Nabla <br>
+                        Kjemiblokk 2 <br>
+                        Sem Sælands vei 10, NTNU <br>
+                        7034 Trondheim <br>
+                        Norway
+                    </p>
+                </div>
 
-                    <div class="col-md-3 ">
+                <div class="col-md-3 ">
 
-                    <h2>Tilbakemelding</h2>
-                        <p>
-                        Har du funnet en feil, får du ikke logget på, eller er det noe som burde forbedres? Fyll ut <a href="/contact/feedback/">tilbakemeldingskjema</a> eller kontakt webkom:<br>
-                        <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
-                        </p>
-                    </div>
+                <h2>Tilbakemelding</h2>
+                    <p>
+                    Har du funnet en feil, får du ikke logget på, eller er det noe som burde forbedres? <br>
+                    Fyll ut <a href="/contact/feedback/">tilbakemeldingskjema</a> eller kontakt webkom:<br>
+                    <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
+                    </p>
+                </div>
 
-                    {# end om nabla #}
+                {# end om nabla #}
 
-                    {# nablalogo #}
-                    <div class="col-md-3 center" id="nablafooter">
-                        <img src="{% static "img/nabla-white.svg" %}" alt="nabla logo">
-                        <br />
-                        <br />
-                        <a href="https://www.facebook.com/nablantnu/" class="fab fa-facebook-f fa-4x social-icon"></a>
-                        <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-4x social-icon"></a>
-                        <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-4x social-icon"></a>
-                        <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-4x social-icon"></a>
-                    </div>
+                {# nablalogo #}
+                <div class="col-md-3 center" id="nablafooter">
+                    <img src="{% static "img/nabla-white.svg" %}" alt="nabla logo">
+                    <br />
+                    <br />
+                    <a href="https://www.facebook.com/nablantnu/" class="fab fa-facebook-f fa-4x social-icon"></a>
+                    <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-4x social-icon"></a>
+                    <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-4x social-icon"></a>
+                    <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-4x social-icon"></a>
+                </div>
             </div>
             </div>
         </footer>
