--- a/nablapps/poll/templates/poll/poll_include.html
+++ b/nablapps/poll/templates/poll/poll_include.html
@@ -10,7 +10,7 @@
     <link href="{% static "poll/poll_sidebar.css" %}" rel="stylesheet">
 {% endaddtoblock %}
 
-<div class="poll h-100 card card body card-body-overline">
+<div class="poll h-100 card card-body card-body-overline">
     <h4>{{ poll.question }}</h4>
 
     {% if poll_has_voted %}
