--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -57,8 +57,10 @@
             <div height=300px>
                 <h3><a class="text-dark" href="{% url "nablad_list" %}">Siste Nablad</a></h3>
                 <div class="row text-center">
+
+{#                    This should be revritten #}
                     {% for nablad in new_nablad %}
-                        <div class="col-md-6{% if not forloop.first %} d-none d-md-block {% endif %}">
+                        <div class="col-md-12{% if not forloop.first %} d-none d-md-block {% endif %}">
                             <a  href="{{ nablad.get_absolute_url }}">
                                 <img class="rounded mw-100" src="{% thumbnail nablad.thumbnail 730x200 %}">
                             </a>
