--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -62,7 +62,7 @@
                     {% for nablad in new_nablad %}
                         <div class="col-md-12{% if not forloop.first %} d-none d-md-block {% endif %}">
                             <a  href="{{ nablad.get_absolute_url }}">
-                                <img class="rounded mw-100" src="{% thumbnail nablad.thumbnail 730x200 %}">
+                                <img class="rounded w-75" src="{% thumbnail nablad.thumbnail 730x200 %}">
                             </a>
                         </div >
                     {% endfor %}
@@ -123,7 +123,7 @@
             <div height=300px>
                 <h3><a class="text-dark" href="{% url "season_view" %}">Siste Skråttcast</a></h3>
                 <a  href="{{ new_podcast.get_absolute_url }}">
-                     <img class="rounded m-75" src="{{ new_podcast.image.url }}" alt="{{ new_podcast.title }}" style="max-width: 100%;"/>
+                     <img class="rounded mw-100" src="{{ new_podcast.image.url }}" alt="{{ new_podcast.title }}" style="max-width: 100%;"/>
                 </a>
             </div>
         {% else %}
