--- a/templates/base.html
+++ b/templates/base.html
@@ -278,6 +278,12 @@
             </div>
             <!-- /.navbar-collapse -->
             </nav>
+
+            <a href="https://nabla.no/nyheter/887/viktig-info-om-koronasmitte">
+                <nav class="navbar navbar-dark bg-warning text-dark text-decoration-none center-text corona">
+                    <span>Informasjon om korona fra Nabla finner du her.</span>
+               </nav>
+            </a>
         </header>
 
         <!-- Page Content -->
