--- a/templates/wiki/includes/breadcrumbs.html
+++ b/templates/wiki/includes/breadcrumbs.html
@@ -1,101 +1,104 @@
 {% load i18n wiki_tags %}
 {% if urlpath %}
-<div id="article-breadcrumbs">
 
-<ul class="breadcrumb pull-left">
-  {% for ancestor in urlpath.cached_ancestors %}
-    <li><a href="{% url 'wiki:get' path=ancestor.path %}">{{ ancestor.article.current_revision.title|truncatechars:25 }}</a></li>
-  {% endfor %}
-  <li class="active">{{ article.current_revision.title|truncatechars:20 }}</li>
-</ul>
-<div class="pull-left" style="margin-left: 5px;">
-  <div class="btn-group">
-    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#" style="padding: 7px;" title="{% trans "Sub-articles for" %} {{ article.current_revision.title }}">
-      <span class="fa fa-sitemap"></span>
-      <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      {% for child in children_slice %}
-        <li>
-          <a href="{% url 'wiki:get' path=child.path %}">
-            {{ child.article.current_revision.title }}
-          </a>
-        </li>
-        {% empty %}
-        <li><a href="#"><em>{% trans "No sub-articles" %}</em></a></li>
+    <nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item"><a href="#">Library</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Data</li>
+  </ol>
+</nav>
+
+<nav id="article-breadcrumbs" aria-label="breadcrumb">
+
+    <ol class="breadcrumb ">
+      {% for ancestor in urlpath.cached_ancestors %}
+        <li class="breadcrumb-item"><a href="{% url 'wiki:get' path=ancestor.path %}">{{ ancestor.article.current_revision.title|truncatechars:25 }}</a></li>
       {% endfor %}
-      {% if children_slice_more %}
-      <li><a href="#"><em>{% trans "...and more" %}</em></a></li>
-      {% endif %}
-      <li class="divider"></li>
-      <li>
-        <a href="{% url 'wiki:dir' path=urlpath.path %}">{% trans "Browse articles in this level" %} &raquo;</a>
-      </li>
-    </ul>
-  </div>
-</div>
-<div class="pull-left" style="margin-left: 5px;">
-  <div class="btn-group">
-    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#" style="padding: 7px;" title="{% trans "Sub-articles for" %} {{ article.current_revision.title }}">
-      <span class="fa fa-file"></span>
-      <span class="caret"></span>
-    </a>    
-    <ul class="dropdown-menu">
-      <li>
-        {% if urlpath.parent %}
-        <a href="{% url 'wiki:create' path=urlpath.parent.path %}" style="padding: 7px;">
-          <span class="fa fa-arrow-right"></span>
-          {% trans "New article next to" %} {{ article.current_revision.title }}
+      <li class="breadcrumb-item active">{{ article.current_revision.title|truncatechars:20 }}</li>
+    </ol>
+    <div class="float-left" style="margin-left: 5px;">
+        <div class="dropdown">
+            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#" style="padding: 7px;" title="{% trans "Sub-articles for" %} {{ article.current_revision.title }}">
+              <span class="fa fa-sitemap"></span>
+              <span class="caret"></span>
+            </a>
+            <div class="dropdown-menu">
+                {% for child in children_slice %}
+                <a class="dropdown-item" href="{% url 'wiki:get' path=child.path %}">
+                    {{ child.article.current_revision.title }}
+                </a>
+                {% empty %}
+                <a class="dropdown-item" href="#"><em>{% trans "No sub-articles" %}</em></a>
+                {% endfor %}
+                {% if children_slice_more %}
+                <a class="dropdown-item" href="#"><em>{% trans "...and more" %}</em></a>
+                {% endif %}
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'wiki:dir' path=urlpath.path %}">{% trans "Browse articles in this level" %} &raquo;</a>
+            </div>
+        </div>
+    </div>
+    <div class="float-left" style="margin-left: 5px;">
+      <div class="dropdown">
+        <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#" style="padding: 7px;" title="{% trans "Sub-articles for" %} {{ article.current_revision.title }}">
+          <span class="fa fa-file"></span>
+          <span class="caret"></span>
         </a>
-        {% endif %}
-        <a href="{% url 'wiki:create' path=urlpath.path %}" style="padding: 7px;">
-          <span class="fa fa-arrow-down"></span>
-          {% trans "New article below" %} {{ article.current_revision.title }}
-        </a>
-      </li>
-    </ul>
-  </div>
+        <ul class="dropdown-menu">
+          <li>
+            {% if urlpath.parent %}
+            <a class="dropdown-item" href="{% url 'wiki:create' path=urlpath.parent.path %}" style="padding: 7px;">
+              <span class="fa fa-arrow-right"></span>
+              {% trans "New article next to" %} {{ article.current_revision.title }}
+            </a>
+            {% endif %}
+            <a class="dropdown-item"  href="{% url 'wiki:create' path=urlpath.path %}" style="padding: 7px;">
+              <span class="fa fa-arrow-down"></span>
+              {% trans "New article below" %} {{ article.current_revision.title }}
+            </a>
+          </li>
+        </ul>
+      </div>
 </div>
-<div class="pull-left" style="margin-left: 5px;">
+    <div class="float-left" style="margin-left: 5px;">
     <a class="btn btn-info"  href="{% url 'wiki:settings' article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px;">
     <span class="fa fa-wrench"></span>
-    <span class="hidden-xs">{% trans "Settings" %}</span>
-    </a>    
+    <span class="d-none">{% trans "Settings" %}</span>
+    </a>
 </div>
+    {% for plugin in article_tabs %}
+    <div class="float-left" style="margin-left: 5px;">
+        <a class="btn btn-info"  href="{% url 'wiki:plugin' slug=plugin.slug article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px;">
+          <span class="{{ plugin.article_tab.1 }}"></span>
+          <span class="d-none">{{ plugin.article_tab.0 }}</span>
+        </a>
+    </div>
+    {% endfor %}
 
+    <div class="float-left" style="margin-left: 5px;">
+        <a class="btn btn-info"  href="{% url 'wiki:history' article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px;">
+             <span class="fas fa-clock"></span>
+             <span class="d-none">{% trans "Changes" %}</span>
+        </a>
+    </div>
 
-{% for plugin in article_tabs %}
-<div class="pull-left" style="margin-left: 5px;">
-    <a class="btn btn-info"  href="{% url 'wiki:plugin' slug=plugin.slug article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px;">
-      <span class="{{ plugin.article_tab.1 }}"></span>
-      <span class="hidden-xs">{{ plugin.article_tab.0 }}</span>
-    </a>    
-</div>
-{% endfor %}
-
-<div class="pull-left" style="margin-left: 5px;">
-    <a class="btn btn-info"  href="{% url 'wiki:history' article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px;">
-		 <span class="fas fa-clock"></span>
-		 <span class="hidden-xs">{% trans "Changes" %}</span>
-    </a>    
-</div>
-
-{% if article|can_write:user and not article.current_revision.locked %}
-	<div class="pull-left" style="margin-left: 5px;">
+    {% if article|can_write:user and not article.current_revision.locked %}
+	<div class="float-left" style="margin-left: 5px;">
 		 <a class="btn btn-info"  href="{% url 'wiki:edit' article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px; padding-left: 15px; padding-right: 20px;">
 			 <span class="fa fa-edit"></span>
-			 <span class="hidden-xs">Edit</span>
-		 </a>    
+			 <span class="d-none">Edit</span>
+		 </a>
 	</div>
-{% else %}
-	<div class="pull-left" style="margin-left: 5px;">
+    {% else %}
+	<div class="float-left" style="margin-left: 5px;">
 		 <a class="btn btn-info"  href="{% url 'wiki:source' article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px;">
 		 <span class="fa fa-lock"></span>
-		 <span class="hidden-xs">{% trans "View Source" %}</span>
-		 </a>    
+		 <span class="d-none">{% trans "View Source" %}</span>
+		 </a>
 	</div>
 {% endif %}
 
-<div style="clear: both"></div>
-</div>
+    <div style="clear: both"></div>
+</nav>
 {% endif %}
