Added svg flags, changed html to support new svg

--- a/templates/base.html
+++ b/templates/base.html
@@ -269,7 +269,7 @@
                 {% block flag %}
                     <li class="nav-item" >
                         <a class="navbar-brand " href="/english/">
-                            <img src="{% static "img/GB_flag.png" %}" alt="Eng">
+                            <img width="30" src="{% static "img/GB_flag.svg" %}" alt="Eng">
                         </a>
                     </li>
                 {% endblock %}
