--- a/templates/flatpages/englishCom.html
+++ b/templates/flatpages/englishCom.html
@@ -10,7 +10,7 @@
 {% block flag %}
 <li class="nav-item" >
   <a class="navbar-brand" href="/">href="/">
-      <img src="{% static "img/NOR_flag.png" %}" alt="Nor">
+      <img width="30" src="{% static "img/NOR_flag.svg" %}" alt="Nor">
   </a>
 </li>
 {% endblock %}
