--- a/nablapps/album/templates/album/album_list.html
+++ b/nablapps/album/templates/album/album_list.html
@@ -32,7 +32,7 @@
     <ul class="pagination d-flex justify-content-between">
       {% if page_obj.has_previous %}
           <li class="page-item">
-              <a class="page-link" href="{{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span> forrige</a>
+              <a class="page-link" href="?page={{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span> forrige</a>
       {% endif %}
 
         <li class="disabled page-item">
@@ -41,7 +41,7 @@
 
         {% if page_obj.has_next %}
             <li class="page-item">
-                <a class="page-link" href="{{ page_obj.next_page_number }}">neste  <span aria-hidden="true">&rarr;</span></a>
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">neste  <span aria-hidden="true">&rarr;</span></a>
             </li>
         {% endif %}
     </ul>
