Fikset overflow i footeren

--- a/templates/base.html
+++ b/templates/base.html
@@ -322,7 +322,7 @@
                 {# end kontakt #}
 
                 {# om nabla #}
-                <div class="col-md-3 ">
+                <div class="col-lg-3 ">
                 <h2>Informasjon</h2>
 {#                   <p >Se <a href="/contact/">kontaktsiden</a></p>#}
 
@@ -336,7 +336,7 @@
 
 
                 </div>
-                 <div class="col-md-3 text-center ">
+                 <div class="col-lg-3 text-center ">
                     <h2>Kontakt</h2>
 {#                        <a class="email" href="mailto:nabla@nabla.ntnu.no">nabla@nabla.ntnu.no</a>#}
                         <p > <a href="/contact/">Kontaktside</a> <br>
@@ -348,7 +348,7 @@
                     </p>
                 </div>
 
-                <div class="col-md-3 ">
+                <div class="col-lg-3 ">
 
                 <h2>Tilbakemelding</h2>
                     <p>
@@ -361,14 +361,14 @@
                 {# end om nabla #}
 
                 {# nablalogo #}
-                <div class="col-md-3 center" id="nablafooter">
+                <div class="col-lg-3 center" id="nablafooter">
                     <img src="{% static "img/nabla-white.svg" %}" alt="nabla logo">
                     <br />
                     <br />
-                    <a href="https://www.facebook.com/nablantnu/" class="fab fa-facebook-f fa-4x social-icon"></a>
-                    <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-4x social-icon"></a>
-                    <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-4x social-icon"></a>
-                    <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-4x social-icon"></a>
+                    <a href="https://www.facebook.com/nablantnu/" class="fab fa-facebook-f fa-3x social-icon"></a>
+                    <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-3x social-icon"></a>
+                    <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-3x social-icon"></a>
+                    <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-3x social-icon"></a>
                 </div>
             </div>
             </div>
