--- a/templates/wiki/article.html
+++ b/templates/wiki/article.html
@@ -17,21 +17,27 @@
   <nav 
     id="article-menu" 
     class="navbar navbar-expand-md" 
-    style="background-color: #ffffff; margin-top: 7px; margin-bottom: 15px">
-      <ul class="nav nav-pills" id="article-menu">
-        <li class="pull-left" id="article-title-li">
-          <h1 id="article-title">
-            {{ article.current_revision.title }}
-              {% if article.current_revision.locked %}
-                <span class="fa fa-lock"></span> {% trans "locked" %}
-              {% endif %}
-          </h1>
-        </li>
-      </ul>
-    </nav>
-    <ul class="nav justify-content">
+    style="background-color: #f0f0f0; margin-top: 7px; margin-bottom: 15px;">
+      
+      <ul class="nav">
           {% include "wiki/includes/article_menu.html" %}
-    </ul>
+      </ul>
+
+    </nav>
+
+      <h1
+        id="article-title" 
+        class="border-bottom"
+        style="margin-bottom: 15px"
+        >
+        {{ article.current_revision.title }}
+          {% if article.current_revision.locked %}
+            <span class="fa fa-lock"></span> {% trans "locked" %}
+          {% endif %}
+      </h1>
+    
+
+
     <div>
       {% block wiki_contents_tab %}
       {% endblock %}
