Updated "ny student" popup info

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZ9L6WnlyGTlfl3tauTFs0QGlUa20qwq4_aPgELNmmtA-8TQ/viewform?usp=sf_link"
                            class="btn btn-primary center-block btn-lg"
                            style="white-space:normal">
-                            Trykk her for påmelding til fadderperioden - <b>viktig!</b>
+                            Trykk her for påmelding til fadderperioden - <b>IKKE OPPDATERT TIL 2020!</b>
                         </a>
                         <br>
                         <p>
@@ -112,7 +112,7 @@
                             <a href="nystudent" class="list-group-item list-group-item-action" style="color:black">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
                             </a>
-                            <a href="https://www.facebook.com/groups/2050067498621475/" class="list-group-item list-group-item-action"style="color:black">
+                            <a href="https://www.facebook.com/groups/2593569320864380" class="list-group-item list-group-item-action"style="color:black">
                                 Meld deg også inn i facebook-gruppen for fadderperioden 2019 ved å trykke her.
                             </a>
                             <a href="english" class="list-group-item list-group-item-action"style="color:black">
