fikset noen smaa bootstrap 3 ting paa ny student popup

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,11 +84,10 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                    <h4 class="modal-title" id="exampleModalLongTitle">Ny student?
+                        <h5 class="modal-title" id="exampleModalLongTitle">Ny student?</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                            <span aria-hidden="true">&times;</span>
                         </button>
-                    </h4>
                     </div>
                     <div class="modal-body">
                         <p>
@@ -96,19 +95,16 @@
                             Vi har et heidundranes fadderopplegg som vi håper du vil ta del i!
                             Det er derfor veldig viktig at du trykker på knappen under og registrerer deg!
                         </p>
-                        <br>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZ9L6WnlyGTlfl3tauTFs0QGlUa20qwq4_aPgELNmmtA-8TQ/viewform?usp=sf_link"
-                           class="btn btn-primary center-block btn-lg"
+                           class="btn btn-primary btn-lg btn-block my-1"
                            style="white-space:normal">
                             Trykk her for påmelding til fadderperioden - <b>IKKE OPPDATERT TIL 2020!</b>
                         </a>
-                        <br>
                         <p>
                             Registreringen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
                             Gjør dette nå, og så kan du lese resten av informasjonen senere.
                         </p>
-                        <br>
-                        <div class="list-group-flush">
+                        <div class="list-group">
                             <a href="nystudent" class="list-group-item list-group-item-action" style="color:black">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
                             </a>
