Changes to "new student" pop-up

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,10 +95,10 @@
                             Vi har et heidundranes fadderopplegg som vi håper du vil ta del i!
                             Det er derfor veldig viktig at du trykker på knappen under og registrerer deg!
                         </p>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZ9L6WnlyGTlfl3tauTFs0QGlUa20qwq4_aPgELNmmtA-8TQ/viewform?usp=sf_link"
+                        <a href="https://forms.gle/yniT7FZm9XavP8kK8"
                            class="btn btn-primary btn-lg btn-block my-1"
                            style="white-space:normal">
-                            Trykk her for påmelding til fadderperioden - <b>IKKE OPPDATERT TIL 2020!</b>
+                            Trykk her for påmelding til fadderperioden - <b>2020!</b>
                         </a>
                         <p>
                             Registreringen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
@@ -109,14 +109,16 @@
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
                             </a>
                             <a href="https://www.facebook.com/groups/2593569320864380" class="list-group-item list-group-item-action"style="color:black">
-                                Meld deg også inn i facebook-gruppen for fadderperioden 2019 ved å trykke her.
+                                Meld deg også inn i facebook-gruppen for fadderperioden 2020 ved å trykke her.
                             </a>
                             <a href="english" class="list-group-item list-group-item-action"style="color:black">
                                 <b>New international student?</b> Read more about Nabla on our english pages by cliking here.
                             </a>
                         </div>
                         <br>
+                        <!--
                         <img src="https://nabla.no/media/uploads/news_pictures/56478616_305187903480871_3493708702748246016_n.jpg" style="width: 100%;">
+                        -->
                         <small>
                             Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
                             Derfor må du som ny student oppgi kontaktopplysninger selv.
