Replace django 2 syntax with django 3 syntax
Replace load staticfiles with load static

--- a/nablapps/events/templates/events/event_list.html
+++ b/nablapps/events/templates/events/event_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load sekizai_tags %}
-{% load staticfiles %}
+{% load static %}
 
 
 {% block title %}Arrangement{% endblock %}
