--- a/templates/wiki/article.html
+++ b/templates/wiki/article.html
@@ -1,6 +1,6 @@
 {% extends "wiki/base_site.html" %}
 {% load wiki_tags i18n sekizai_tags %}
-{% load staticfiles %}
+{% load static %}
 
 {% block wiki_pagetitle %}{{ article.current_revision.title }}{% endblock %}
 
