--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
                                 Meld deg også inn i facebook-gruppen for fadderperioden 2020 ved å trykke her.
                             </a>
                             <a href="english" class="list-group-item list-group-item-action"style="color:black">
-                                <b>New international student?</b> Read more about Nabla on our english pages by cliking here.
+                                <b>New international student?</b> Read more about Nabla on our english pages by clicking here.
                             </a>
                         </div>
                         <br>
